# cppwhiletrue

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  devector.hpp  devector_perf.cpp  devector_test.cpp  devector_test.hpp  perf_testing.hpp  stack.hpp  stack_test.cpp
detail/: buffer.hpp
src/: CMakeLists.txt
src/dev/: CMakeLists.txt  bitutils.hpp  devector.hpp  stack.hpp
src/dev/cmake_example/: CMakeLists.txt  helloworld.cpp
src/dev/detail/: buffer.hpp  destroy_range.hpp
src/test/: .stack_test.cpp.swp  CMakeLists.txt  bitutils_test.cpp  debug_allocator.hpp  debug_t.hpp  devector_perf.cpp  devector_test.cpp  devector_test.hpp  freelist_allocator.hpp  include_catch.hpp  perf_testing.hpp  select_test.cpp  stack_test.cpp
